Use gradle for build